# aws-test-harness

./: .gitignore  CLAUDE.md  Makefile  README.md  check.sh  deploy-nested-stack-template.sh  go.sh  lint.sh  mypy.ini  pyproject.toml  pytest.ini  samconfig.toml  template.yaml  test.sh  update-state-machine-definition.sh
example/: pyproject.toml  samconfig.toml  template.yaml
example/example-state-machine/: statemachine.asl.yaml  template.yaml
example/functions/input-transformer/: app.py
example/tests/: aws_resource_driver.py  conftest.py  json_file_configuration.py  lambda_function_event_listener.py  test_state_machine.py
example/tests/sandbox/: samconfig.toml  template.yaml
infrastructure/: pyproject.toml  test-doubles.yaml  test.sh
infrastructure/acceptance-tests/: pyproject.toml  test.sh
infrastructure/acceptance-tests/tests/infrastructure_acceptance_tests/: conftest.py  test_managing_test_doubles.py
infrastructure/ecs-task-test-double/: Dockerfile  ecs_task_runner.py  pyproject.toml
infrastructure/ecs-task-test-double/src/: app.py  ecs_task_runner.py  json_logger.py
infrastructure/ecs-task-test-double/src/adapters/: dynamodb_results_inbox.py  http_ecs_metadata_source.py  s3_mocking_session_id_source.py  sqs_invocation_handling_queue.py  system_clock_poller.py
infrastructure/ecs-task-test-double/src/domain/: async_invocation_handler.py  invocation.py  task_context.py
infrastructure/invocation-handler/: build.sh  pyproject.toml  test.sh
infrastructure/invocation-handler-code/: pyproject.toml  test.sh
infrastructure/invocation-handler-code/src/test_double_invocation_handler_code/: index.py
infrastructure/invocation-handler-code/src/test_double_invocation_handler_code/domain/: invocation_post_office.py  invocation_result_service.py
infrastructure/invocation-handler-code/tests/invocation_handler_tests/acceptance/: test_controlling_lambda_function_behaviour.py
infrastructure/invocation-handler-infrastructure/: test.sh
infrastructure/invocation-handler-infrastructure/tests/test_double_invocation_handler_infrastructure_tests/: test_controlling_lambda_function_behaviour.py
infrastructure/invocation-handler-message-infrastructure/: pyproject.toml
infrastructure/invocation-handler-message-infrastructure/src/test_double_invocation_handler_message_infrastructure/: test_double_invocation_messaging_resource_factory.py
infrastructure/invocation-handler-message-infrastructure/src/test_double_invocation_handler_message_infrastructure/test_support/: invocation_messaging_utils.py  sqs_utils.py
infrastructure/invocation-handler/src/test_double_invocation_handler/: index.py
infrastructure/invocation-handler/src/test_double_invocation_handler/domain/: invocation_post_office.py  invocation_result_retrieval_timeout_exception.py  invocation_result_service.py  retrieval_attempt.py
infrastructure/invocation-handler/src/test_double_invocation_handler/infrastructure/: serverless_invocation_post_office.py
infrastructure/invocation-handler/tests/acceptance/invocation_handler_acceptance_tests/: conftest.py  test_controlling_lambda_function_behaviour.py
infrastructure/invocation-handler/tests/invocation_handler_acceptance_tests/: conftest.py  test_controlling_lambda_function_behaviour.py
infrastructure/invocation-handler/tests/invocation_handler_tests/acceptance/: test_controlling_lambda_function_behaviour.py
infrastructure/macros/: template.yaml
infrastructure/macros/src/: out_of_band_deployment_support.py  test_doubles.py
infrastructure/macros/test-doubles/: build.sh  pyproject.toml  test.sh
infrastructure/macros/test-doubles/invocation-handler/scripts/: build.sh
infrastructure/macros/test-doubles/src/test_doubles/: fragment_generator.py  index.py  test_double_resource_factory.py
infrastructure/macros/test-doubles/src/test_doubles_macro/: fragment_generator.py  index.py  test_double_invocation_handling_resource_factory.py  test_double_resource_factory.py  test_double_s3_bucket_resource_factory.py  test_double_state_machine_resource_factory.py
infrastructure/macros/test-doubles/tests/test_doubles_macro_tests/: conftest.py  fragment_generator_test.py  test_double_invocation_handling_resource_factory_test.py  test_double_invocation_handling_resource_factory_tests.py  (+4 more)
infrastructure/scripts/: build.sh  install.sh  package.sh
infrastructure/scripts/lib/: lambda.bash
infrastructure/src/: install.sh  template.yaml
infrastructure/templates/: test-doubles.yaml
infrastructure/templates/test-doubles/: template.yaml
infrastructure/templates/test-doubles/src/: index.py
infrastructure/templates/tester-role/: template.yaml
infrastructure/test-double-invocation-handler/: test.sh
infrastructure/test-double-invocation-handler/function-code/: pyproject.toml  test.sh
infrastructure/test-double-invocation-handler/infrastructure/: pyproject.toml
infrastructure/test-double-invocation-handler/messaging/: pyproject.toml  test.sh
infrastructure/test-support/: pyproject.toml
infrastructure/test-support/src/infrastructure_test_support/: __init__.py  digest_utils.py  eventual_consistency_utils.py  s3_utils.py  sqs_utils.py  step_functions_utils.py
infrastructure/tests/infrastructure_tests/: conftest.py  test_managing_test_doubles.py
languages/python/: pyproject.toml  test.sh
languages/python/src/aws_test_harness/: __init__.py  cloudformation_resource_registry.py  state_machine_driver.py  state_machine_execution.py  state_machine_execution_result.py  test_double_registry.py  test_double_source.py  test_harness.py
languages/python/test-support/: pyproject.toml
languages/python/tests/: conftest.py
languages/python/tests/aws_test_harness_tests/: conftest.py
languages/python/tests/tests/: conftest.py
test-support/: pyproject.toml
test-support/src/aws_test_harness_test_support/: __init__.py  eventual_consistency_utils.py  file_utils.py  step_functions_utils.py  system_command_executor.py  test_cloudformation_stack.py  test_s3_bucket_stack.py
test-support/src/aws_test_harness_test_support/mocking/: __init__.py  verifiable_spy.py
(+176 files in other folders)
