[project]
name = "aws-test-harness-project"
version = "0.1.0"
description = "Infrastructure for test-driving real AWS resources from your local machine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
dev-dependencies = [
    "aws-test-harness",
    "boto3-stubs[cloudformation]>=1.36.2",
    "boto3>=1.36.2",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.uv.workspace]
members = ["languages/python"]

[tool.uv.sources]
aws-test-harness = { workspace = true }
