[project]
name = "aws-test-harness-project"
version = "0.1.0"
description = "Infrastructure for test-driving real AWS resources from your local machine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
dev-dependencies = [
    "aws-test-harness",
    "boto3>=1.36.2",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "aws-test-harness-test-support",
]

[tool.uv.workspace]
members = [
    "languages/python",
    "test-support",
    "infrastructure/acceptance-tests",
    "infrastructure/macros/test-doubles",
    "infrastructure/test-support",
    "infrastructure/invocation-handler-infrastructure",
    "infrastructure/invocation-handler-code",
    "infrastructure/invocation-handler-message-infrastructure"
]

[tool.uv.sources]
aws-test-harness = { workspace = true }
aws-test-harness-test-support = { workspace = true }
infrastructure-test-support = { workspace = true }
