[project]
name = "aws-test-harness-project"
version = "0.1.0"
description = "Infrastructure for test-driving real AWS resources from your local machine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "aws-test-harness",
    "boto3>=1.36.2",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "aws-test-harness-test-support",
    "ty>=0.0.1a25",
]

[tool.uv.workspace]
members = [
    "languages/python",
    "test-support",
    "infrastructure/acceptance-tests",
    "infrastructure/macros/test-doubles",
    "infrastructure/test-support",
    "infrastructure/test-double-invocation-handler/infrastructure",
    "infrastructure/test-double-invocation-handler/function-code",
    "infrastructure/test-double-invocation-handler/messaging"
]

[tool.uv.sources]
aws-test-harness = { workspace = true }
aws-test-harness-test-support = { workspace = true }
infrastructure-test-support = { workspace = true }

[tool.ty.environment]
root = [
    ".",
    # Explicit root to enable resolution of test support classes from tests
    "./languages/python/tests",
]
