[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aws-test-harness>=0.0.1a11",
]

[tool.uv]
dev-dependencies = [
    "aws-test-harness",
    "pytest>=8.3.4",
]

[tool.uv.sources]
aws-test-harness = { path = "../", editable = true }
