[project]
name = "infrastructure"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "aws-test-harness-test-support",
    "boto3>=1.36.6",
    "boto3-stubs-lite[s3]>=1.36.6",
    "pytest>=8.3.4",
]

[tool.uv.sources]
aws-test-harness-test-support = { workspace = true }
