[project]
name = "aws-test-harness-test-support"
version = "0.1.0"
description = "Test utilities for testing the aws-test-harness project"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.36.6",
    "pyyaml>=6.0.2",
    "boto3-stubs-lite[cloudformation,s3,sqs]>=1.36.6",
    "types-pyyaml>=6.0.12.20241230",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
