[project]
name = "infrastructure-acceptance-tests"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "aws-test-harness-test-support",
    "boto3>=1.36.6",
    "boto3-stubs-lite[dynamodb,s3,sqs,stepfunctions]>=1.36.6",
    "pytest>=8.3.4",
    "infrastructure-test-support",
    "test-double-invocation-handler-message-infrastructure",
]

[tool.uv.sources]
test-double-invocation-handler-message-infrastructure = { workspace = true }
