[project]
name = "test-double-invocation-handler"
version = "0.1.0"
description = "Code for Test Double Invocation Handler Lambda function"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.13",
    "boto3-stubs-lite[sqs]>=1.37.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
