[project]
name = "aws-test-harness"
version = "0.1.0"
description = "Python package for test-driving real AWS resources from your local machine"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.36.6",
    "boto3-stubs-lite[cloudformation,dynamodb,s3,sqs,stepfunctions]>=1.36.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aws-test-harness-test-support",
    "pytest>=8.3.4",
]
