[project]
name = "test-doubles-macro"
version = "0.1.0"
description = "CloudFormation Macro for adding test doubles resources to CloudFormation templates"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aws-test-harness-test-support",
    "boto3>=1.36.6",
    "boto3-stubs-lite[lambda,s3,sqs,stepfunctions]>=1.36.6",
    "infrastructure-test-support",
    "pytest>=8.3.4",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
