[project]
name = "test-double-invocation-handler-function-code"
version = "0.1.0"
description = "Code for Test Double Invocation Handler Lambda function"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-typing>=2.20.0",
    "boto3>=1.37.13",
    "boto3-stubs-lite[dynamodb,sqs]>=1.37.13",
    "test-double-invocation-handler-messaging",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aws-test-harness-test-support",
    "infrastructure-test-support",
    "pytest>=8.3.4",
]

[tool.uv.sources]
infrastructure-test-support = { workspace = true }
test-double-invocation-handler-messaging = { workspace = true }
